# apertium-urd

./: .gitattributes  AUTHORS  Makefile.am  README  apertium-urd-0.1.pc.in  apertium-urd.pc.in  apertium-urd.urd.dix  apertium-urd.urd.rlx  configure.ac  modes.xml
dev/: apertium-urd.urd.dix  replace-list.tsv  speling-convertor-urdu.py
test/: analysis-input.txt  analysis-morph-expected.txt  tests.json
